--- a/hb-workflow.org
+++ b/hb-workflow.org
@@ -163,6 +163,12 @@ them in the dark and feed them shit'.
    - [[https://en.wikipedia.org/wiki/T-shaped_skills][T-shaped skills]] | Wikipedia
    - [[https://www.zionandzion.com/what-is-a-t-shaped-person/][What is a T Shaped Person?]] | Zion & Zion
    - [[https://web.archive.org/web/20110329003842/http://www.chiefexecutive.net/ME2/dirmod.asp?sid=&nm=&type=Publishing&mod=Publications::Article&mid=8F3A7027421841978F18BE895F87F791&tier=4&id=F42A23CB49174C5E9426C43CB0A0BC46][IDEO CEO Tim Brown: T-Shaped Stars]] | Chief Executive 
+   - [[http://neilperkin.typepad.com/only_dead_fish/2011/10/revisiting-t-shaped-people.html][Revisiting 'T-Shaped' People]] | Only Dead Fish
+   - [[https://www.fastcompany.com/52795/strategy-design][Strategy by Design]] | Fast Company
+   - "The hunt is on for the Renaissance Man of computing" |
+     David Guest, The Independent 1991
+
+
 
 #+ATTR_ORG: width="300px"
 [[./img/t-shaped-people.jpg]]
