--- a/hb-workflow.org
+++ b/hb-workflow.org
@@ -361,6 +361,20 @@ Mary Poppendieck warns that conformity bias works against
 some of the best ideas in a team (group) from emerging at
 all.
 
+There are any number of factors that determine if people
+speak up in a group environment or keep their mouths shut.
+Factors include:
+
+  - age
+  - social status
+  - experience
+  - language skills
+  - gender
+  - culture
+
+Many cultures socialise their societies to always conform,
+go with the flow and keep your opinions to yourself.
+
 #+begin_quote
 Stop Voting
 
@@ -371,6 +385,35 @@ Stop Voting
 
 -- Mary Poppendieck | The Future of Software Engineering (presentation)
 #+end_quote
+
+So it is important to create environments where all members
+of a team can contribute ideas without feeling that they are
+being watched or judged by what they say or not say.
+
+Automattic's project blogs where everyone simply adds on
+comments to an existing topic helps all team members
+contribute.
+
+Team leaders need to solicite ideas before and after
+meetings and provide asynchronous channels for people to
+propose ideas.  This is not to say that all ideas are equal
+-- far from it.  But it's often hardest to get the ball
+rolling and propose something new in the first place.
+
+So long as everyone in the team shows respect for each
+other's ideas and are not immediately dismissive or derisive
+then everyone benifits.  Even if something is a patently
+stupid idea, there are any number of reasons that it was
+proposed -- perhaps the person wasn't aware of information
+that was considered to be common knowledge by the rest of
+the group -- if so, then it should be treated as an
+opportunity to teach and learn and improve the person's
+knowledge and ensure that the group improves as a whole.
+
+That's that you should never start a sentence with "I can't
+believe you never..."  Because at some point in the past you
+"never" also, and everyone learns different things at
+different points in their lives in different contexts.
 
 * Scrum Values
 
