--- a/hb-methodologies.org
+++ b/hb-methodologies.org
@@ -108,8 +108,38 @@ broader concept of project development.
 
 *Needless to say this document is very much a work in progress!*
 
-* Agile
 
+* Working Backwards
+
+  - [[http://www.allthingsdistributed.com/2006/11/working_backwards.html][Working Backwards - All Things Distributed]] | @Amazon
+ 
+#+begin_quote
+11.3 On Writing Manuals
+
+I guess most manuals are written after-the-fact; documenting
+a program that’s already there. This is not how this manual
+is written. When implementing something, I write the manual
+entry for that something straight away. I then see that it’s
+difficult to explain the functionality, so I write how it’s
+supposed to be, and then I change the
+implementation. Writing the documentation and writing the
+code go hand in hand.
+
+This, of course, means that this manual has no, or little,
+flow. It documents absolutely everything in Gnus, but often
+not where you’re looking for it. It is a reference manual,
+and not a guide to how to get started with Gnus.
+
+That would be a totally different book, that should be
+written using the reference manual as source material. It
+would look quite different.
+
+-- [[http://gnus.org/manual/gnus_135.html#On-Writing-Manuals][Gnus Manual: 11.3 On Writing Manuals]]
+#+end_quote
+
+
+
+* Agile
 ** Agile Manifesto
  - [[http://agilemanifesto.org/][Manifesto for Agile Software Development]]
  -[[http://agilemanifesto.org/principles.html][ Principles behind the Agile Manifesto]]
