humility and dogged perseverance

--- a/hb-how-we-work.org
+++ b/hb-how-we-work.org
@@ -81,12 +81,13 @@ same.  That said, there are patterns to the way we work, and we must
 agree on standard means of working with each other.
 
 There /are/ ways that we don't work and manage.  We abhore dogmatic
-truth and ideologies of all stripes in all their many guises.  We
-don't do command structures or waterfalls.  We are neither flat or a
-tree, neither linear or rhizomatic.  We embrace the duality,
-complexity, and paradoxes and revel in their beauty and accept the
-limits of what we can know, all the while pushing the boundries and
-expanding what is known.
+truth and ideologies of all stripes in all their many guises.  We are
+not snowflakes, and if anything makes us special it is through
+humility and dogged perseverance.  We don't do command structures or
+waterfalls.  We are neither flat or a tree, neither linear or
+rhizomatic.  We embrace the duality, complexity, and paradoxes and
+revel in their beauty and accept the limits of what we can know, all
+the while pushing the boundries and expanding what is known.
 
 And there are tools, proceedures, processes and structure that works
 like a theme in bebop, a structure that you can modulate, and
