--- a/hb-how-we-work.org
+++ b/hb-how-we-work.org
@@ -77,22 +77,22 @@ personal/.  We all work in different ways, there is no one size fits
 all.  We work differently at an organizational level, than at the
 project level and team level work is different from how we work as
 individuals.  And no two projects, teams or individuals work quite the
-same.  That said, there are patterns to the way we work, and we must
-agree on standard means of working with each other.
+same.  That said, there are patterns to the way we work, and work
+together.
+
+And there are tools, proceedures, processes and structure that runs
+through our work like a theme in bebop, a structure that you can
+modulate, and improvise so that no matter how far afield you go, you
+can still hear it, winding through the complex sequence of altered
+chords that give us freedom and strength through discipline and
+structure so the work can always move forward as one.
 
 There /are/ ways that we don't work and manage.  We abhore dogmatic
 truth and ideologies of all stripes in all their many guises.  We are
-not snowflakes, and if anything makes us special it is through
+not snowflakes.  If anything makes us special it is achieved through
 humility and dogged perseverance.  We don't do command structures or
-waterfalls.  We are neither flat or a tree, neither linear or
-rhizomatic.  We embrace the duality, complexity, and paradoxes and
-revel in their beauty and accept the limits of what we can know, all
-the while pushing the boundries and expanding what is known.
-
-And there are tools, proceedures, processes and structure that works
-like a theme in bebop, a structure that you can modulate, and
-improvise so that no matter how far afield you go, you can still hear
-it, winding through the complex sequence of altered chord so that we
-have complete freedom through discipline and structures so work can
-always move forward as one.
+waterfalls, trends, and memes.  We are neither flat nor a tree, neither
+linear nor rhizomatic.  We embrace duality, complexity, and paradoxes
+and revel in their beauty and accept the limits of what we can know,
+all the while pushing the boundries and expanding what is known.
 
