--- a/hb-style-guides.org
+++ b/hb-style-guides.org
@@ -64,12 +64,14 @@ information about thinking about color schemes than you will
 - http://www.cookbook-r.com/Graphs/Colors_(ggplot2)/
 - http://jfly.iam.u-tokyo.ac.jp/color/
 
-#+begin_src
+#+begin_src css
 # The palette with grey:
-cbPalette <- c("#999999", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
+cbPalette <- c("#999999", "#E69F00", "#56B4E9", "#009E73", "#F0E442", 
+               "#0072B2", "#D55E00", "#CC79A7")
 
 # The palette with black:
-cbbPalette <- c("#000000", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
+cbbPalette <- c("#000000", "#E69F00", "#56B4E9", "#009E73", "#F0E442", 
+                 "#0072B2", "#D55E00", "#CC79A7")
 
 # To use for fills, add
   scale_fill_manual(values=cbPalette)
